--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
         <div class="container">
             <div class="contact-info">
                 <span><i class="fas fa-phone"></i> +256 414 231 200</span>
-                <span style="margin-left: 20px;"><i class="fas fa-envelope"></i> info@kcca.go.ug</span>
+                <span style="margin-left: 20px;"><i class="fas fa-envelope"></i> tckayunga@yahoo.com</span>
             </div>
             <div class="social-links">
                 <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -488,7 +488,7 @@
             <div class="logo">
                 <img src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAxMDAgMTAwIj48cmVjdCB3aWR0aD0iMTAwIiBoZWlnaHQ9IjEwMCIgZmlsbD0iIzAwNTZhNiIvPjxjaXJjbGUgY3g9IjUwIiBjeT0iNTAiIHI9IjMwIiBmaWxsPSIjZmZjYzAwIi8+PHBhdGggZD0iTTQwIDQwIEw2MCA0MCBMNjAgNjAgTDQwIDYwIFoiIGZpbGw9IiMwMDU2YTYiLz48L3N2Zz4=" alt="KCCA Logo">
                 <div class="logo-text">
-                    <h1>KAMPALA CAPITAL CITY AUTHORITY</h1>
+                    <h1>KAYUNGA TOWN COUNCIL</h1>
                     <span>A City of Potential, Prosperity and Service Excellence</span>
                 </div>
             </div>
