--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kampala Capital City Authority</title>
+    <title>Kayunga Town Council</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         * {
@@ -545,7 +545,7 @@
             <ul>
                 <li><a href="#">Home</a></li>
                 <li class="dropdown">
-                    <a href="#">About KCCA <i class="fas fa-chevron-down"></i></a>
+                    <a href="#">About KTC <i class="fas fa-chevron-down"></i></a>
                     <div class="dropdown-menu">
                         <a href="#">Our Vision & Mission</a>
                         <a href="#">Leadership</a>
@@ -567,8 +567,8 @@
     <section class="hero">
         <div class="container">
             <div class="hero-content">
-                <h2>Building a World Class City</h2>
-                <p>Kampala Capital City Authority is committed to transforming Kampala into a vibrant, attractive and sustainable city.</p>
+                <h2>Building a Clean, Connected, and Empowered town</h2>
+                <p>Kayunga Town Council, Advancing Together for a Greater Kayunga.</p>
                 <a href="#" class="btn btn-secondary">Learn More</a>
             </div>
         </div>
@@ -579,7 +579,7 @@
         <div class="container">
             <div class="section-title">
                 <h2>Our Services</h2>
-                <p>We provide a wide range of services to residents, businesses and visitors in Kampala</p>
+                <p>We provide a wide range of services to residents, businesses and visitors in Kayunga</p>
             </div>
             <div class="services-grid">
                 <div class="service-card">
@@ -588,7 +588,7 @@
                     </div>
                     <div class="service-content">
                         <h3>Property Rates</h3>
-                        <p>Pay your property rates online or at designated collection points across the city.</p>
+                        <p>Pay your property rates online.</p>
                         <a href="#" class="btn">Learn More</a>
                     </div>
                 </div>
@@ -608,7 +608,7 @@
                     </div>
                     <div class="service-content">
                         <h3>Road Infrastructure</h3>
-                        <p>Information on road construction, maintenance and traffic management in Kampala.</p>
+                        <p>Information on road construction and maintenance </p>
                         <a href="#" class="btn">Learn More</a>
                     </div>
                 </div>
@@ -651,7 +651,7 @@
         <div class="container">
             <div class="section-title">
                 <h2>Latest News & Updates</h2>
-                <p>Stay informed with the latest developments and announcements from KCCA</p>
+                <p>Stay informed with the latest developments and announcements from Kayunga Town Council</p>
             </div>
             <div class="news-grid">
                 <div class="news-card">
@@ -671,8 +671,8 @@
                     </div>
                     <div class="news-content">
                         <div class="news-date">June 10, 2023</div>
-                        <h3>New Waste Collection Schedule for Central Division</h3>
-                        <p>KCCA announces revised waste collection schedule effective July 1st, 2023 to improve efficiency.</p>
+                        <h3>Waste Collection Schedule for Kayunga Town Council</h3>
+                        <p>Know when garbage is collected </p>
                         <a href="#" class="btn">Read More</a>
                     </div>
                 </div>
@@ -683,7 +683,7 @@
                     <div class="news-content">
                         <div class="news-date">June 5, 2023</div>
                         <h3>Streamlined Business Licensing Process Launched</h3>
-                        <p>KCCA introduces a new online portal for business registration and licensing to reduce processing time.</p>
+                        <p>Learn more about the online portal (IRAS) for business registration and licensing to reduce processing time.</p>
                         <a href="#" class="btn">Read More</a>
                     </div>
                 </div>
@@ -800,7 +800,7 @@
         </div>
         <div class="footer-bottom">
             <div class="container">
-                <p>&copy; 2023 Kampala Capital City Authority. All Rights Reserved. | <a href="#" style="color: var(--secondary);">Privacy Policy</a> | <a href="#" style="color: var(--secondary);">Terms of Use</a></p>
+                <p>&copy; 2025 Kayunga Town Council. All Rights Reserved. | <a href="#" style="color: var(--secondary);">Privacy Policy</a> | <a href="#" style="color: var(--secondary);">Terms of Use</a></p>
             </div>
         </div>
     </footer>
