--- a/index.html
+++ b/index.html
@@ -525,8 +525,8 @@
             <div class="logo">
                 <img src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAxMDAgMTAwIj48cmVjdCB3aWR0aD0iMTAwIiBoZWlnaHQ9IjEwMCIgZmlsbD0iIzAwNTZhNiIvPjxjaXJjbGUgY3g9IjUwIiBjeT0iNTAiIHI9IjMwIiBmaWxsPSIjZmZjYzAwIi8+PHBhdGggZD0iTTQwIDQwIEw2MCA0MCBMNjAgNjAgTDQwIDYwIFoiIGZpbGw9IiMwMDU2YTYiLz48L3N2Zz4=" alt="KCCA Logo">
                 <div class="logo-text">
-                    <h1>KAMPALA CAPITAL CITY AUTHORITY</h1>
-                    <span>A City of Potential, Prosperity and Service Excellence</span>
+                    <h1>KAYUNGA TOWN COUNCIL</h1>
+                    <span>Advancing Together for a Greater Kayunga</span>
                 </div>
             </div>
             <div class="search-box">
