--- a/index.html
+++ b/index.html
@@ -735,7 +735,7 @@
                     <h3>Quick Links</h3>
                     <ul class="footer-links">
                         <li><a href="#">Home</a></li>
-                        <li><a href="#">About KCCA</a></li>
+                        <li><a href="#">About US</a></li>
                         <li><a href="#">Services</a></li>
                         <li><a href="#">Projects</a></li>
                         <li><a href="#">Media Center</a></li>
@@ -759,7 +759,7 @@
                     <ul class="contact-info">
                         <li>
                             <i class="fas fa-map-marker-alt"></i>
-                            <span>Plot 1-3 Sir Apollo Kaggwa Road, Kampala, Uganda</span>
+                            <span>Plot 1-3 Mumyuka Road, Kayunga, Uganda</span>
                         </li>
                         <li>
                             <i class="fas fa-phone"></i>
