--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
         <div class="container">
             <div class="contact-info">
                 <span><i class="fas fa-phone"></i> +256 414 231 200</span>
-                <span style="margin-left: 20px;"><i class="fas fa-envelope"></i> info@kcca.go.ug</span>
+                <span style="margin-left: 20px;"><i class="fas fa-envelope"></i> tckayunga@yahoo.com</span>
             </div>
             <div class="social-links">
                 <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -767,7 +767,7 @@
                         </li>
                         <li>
                             <i class="fas fa-envelope"></i>
-                            <span>info@kcca.go.ug</span>
+                            <span>tckayunga@yahoo.com</span>
                         </li>
                         <li>
                             <i class="fas fa-clock"></i>
