--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
     <header class="header-main">
         <div class="container">
             <div class="logo">
-                <img src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAxMDAgMTAwIj48cmVjdCB3aWR0aD0iMTAwIiBoZWlnaHQ9IjEwMCIgZmlsbD0iIzAwNTZhNiIvPjxjaXJjbGUgY3g9IjUwIiBjeT0iNTAiIHI9IjMwIiBmaWxsPSIjZmZjYzAwIi8+PHBhdGggZD0iTTQwIDQwIEw2MCA0MCBMNjAgNjAgTDQwIDYwIFoiIGZpbGw9IiMwMDU2YTYiLz48L3N2Zz4=" alt="KCCA Logo">
+                <img src="https://en.wikipedia.org/wiki/File:Coat_of_arms_of_Uganda.svg">
                 <div class="logo-text">
                     <h1>KAYUNGA TOWN COUNCIL</h1>
                     <span>Advancing Together for a Greater Kayunga</span>
@@ -567,7 +567,7 @@
     <section class="hero">
         <div class="container">
             <div class="hero-content">
-                <h2>Building a Clean, Connected, and Empowered town</h2>
+                <h2>MISSION</h2>
                 <p>Kayunga Town Council, Advancing Together for a Greater Kayunga.</p>
                 <a href="#" class="btn btn-secondary">Learn More</a>
             </div>
