--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
     <header class="header-main">
         <div class="container">
             <div class="logo">
-                <img src="https://en.wikipedia.org/wiki/File:Coat_of_arms_of_Uganda.svg">
+                <img src="national-coat-of-arms-of-the-republic-of-uganda-DTK91D.jpg">
                 <div class="logo-text">
                     <h1>KAYUNGA TOWN COUNCIL</h1>
                     <span>Advancing Together for a Greater Kayunga</span>
