--- a/index.html
+++ b/index.html
@@ -660,8 +660,8 @@
                     </div>
                     <div class="news-content">
                         <div class="news-date">June 15, 2023</div>
-                        <h3>Kampala Inner Ring Road Rehabilitation Project</h3>
-                        <p>The rehabilitation of the Kampala Inner Ring Road is set to begin next month with funding from the World Bank.</p>
+                        <h3>KAYUNGA TOWN COUNCIL FESTIVAL</h3>
+                        <p>Coming soon watch the space.</p>
                         <a href="#" class="btn">Read More</a>
                     </div>
                 </div>
@@ -792,7 +792,7 @@
                         </li>
                         <li>
                             <i class="fas fa-tools"></i>
-                            <span>City Help Desk: 0800 200 300</span>
+                            <span>Help Desk: 0800 200 300</span>
                         </li>
                     </ul>
                 </div>
