--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
         <div class="container">
             <div class="hero-content">
                 <h2>MISSION</h2>
-                <p>Kayunga Town Council, Advancing Together for a Greater Kayunga.</p>
+                <p>vBuilding a Clean, Connected, and Empowered Kayunga</p>
                 <a href="#" class="btn btn-secondary">Learn More</a>
             </div>
         </div>
