--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@
             <div class="news-grid">
                 <div class="news-card">
                     <div class="news-img">
-                        <img src="https://images.unsplash.com/photo-1561484936-3f79fdc2bd38?ixlib=rb-4.0.3&auto=format&fit=crop&w=1470&q=80" alt="Road Construction">
+                        <img video ="snaptik_7304407403775266053_hd (2).mp4">
                     </div>
                     <div class="news-content">
                         <div class="news-date">June 15, 2023</div>
