--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@
             <div class="news-grid">
                 <div class="news-card">
                     <div class="news-img">
-                        <img video ="snaptik_7304407403775266053_hd (2).mp4">
+                        <video src ="snaptik_7304407403775266053_hd (2).mp4"></video>
                     </div>
                     <div class="news-content">
                         <div class="news-date">June 15, 2023</div>
