--- a/index.html
+++ b/index.html
@@ -735,7 +735,7 @@
                     <h3>Quick Links</h3>
                     <ul class="footer-links">
                         <li><a href="#">Home</a></li>
-                        <li><a href="#">About US</a></li>
+                        <li><a href="about.html">About US</a></li>
                         <li><a href="#">Services</a></li>
                         <li><a href="#">Projects</a></li>
                         <li><a href="#">Media Center</a></li>
