--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+Ff<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -549,8 +549,7 @@
                     <div class="dropdown-menu">
                         <a href="#">Our Vision & Mission</a>
                         <a href="#">Leadership</a>
-                        <a href="#">Directorates</a>
-                        <a href="#">Strategic Plan</a>
+                        <a href="#">Departments</a>
                     </div>
                 </li>
                 <li><a href="#">Services</a></li>
