--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@ Ff<!DOCTYPE html>
     <nav class="main-nav">
         <div class="container">
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="ALTERNATIVE.html">Home</a></li>
                 <li class="dropdown">
                     <a href="#">About KTC <i class="fas fa-chevron-down"></i></a>
                     <div class="dropdown-menu">
