--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kampala Capital City Authority</title>
+    <title>Kayunga Town Council</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         * {
@@ -611,7 +611,7 @@
         <div class="container">
             <div class="contact-info">
                 <span><i class="fas fa-phone"></i> +256 414 231 200</span>
-                <span style="margin-left: 20px;"><i class="fas fa-envelope"></i> info@kcca.go.ug</span>
+                <span style="margin-left: 20px;"><i class="fas fa-envelope"></i>tckayunga@yahoo.com</span>
             </div>
             <div class="social-links">
                 <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -625,10 +625,10 @@
     <header class="header-main">
         <div class="container">
             <div class="logo">
-                <img src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAxMDAgMTAwIj48cmVjdCB3aWR0aD0iMTAwIiBoZWlnaHQ9IjEwMCIgZmlsbD0iIzAwNTZhNiIvPjxjaXJjbGUgY3g9IjUwIiBjeT0iNTAiIHI9IjMwIiBmaWxsPSIjZmZjYzAwIi8+PHBhdGggZD0iTTQwIDQwIEw2MCA0MCBMNjAgNjAgTDQwIDYwIFoiIGZpbGw9IiMwMDU2YTYiLz48L3N2Zz4=" alt="KCCA Logo">
+                <img src="national-coat-of-arms-of-the-republic-of-uganda-DTK91D.jpg"></img>
                 <div class="logo-text">
-                    <h1>KAMPALA CAPITAL CITY AUTHORITY</h1>
-                    <span>A City of Potential, Prosperity and Service Excellence</span>
+                    <h1>KAYUNGA TOWN COUNCIL</h1>
+                    <span>Advancing Together for a Greater Kayunga</span>
                 </div>
             </div>
             <div class="search-box">
@@ -646,12 +646,12 @@
             <ul>
                 <li><a href="#">Home</a></li>
                 <li class="dropdown">
-                    <a href="#">About KCCA <i class="fas fa-chevron-down"></i></a>
+                    <a href="#">About KTC <i class="fas fa-chevron-down"></i></a>
                     <div class="dropdown-menu">
                         <a href="#">Our Vision & Mission</a>
                         <a href="#">Leadership</a>
-                        <a href="#">Directorates</a>
-                        <a href="#">Strategic Plan</a>
+                        <a href="#">Departments</a>
+                        
                     </div>
                 </li>
                 <li><a href="#">Services</a></li>
@@ -667,8 +667,8 @@
     <section class="hero">
         <div class="container">
             <div class="hero-content">
-                <h2>Building a World Class City</h2>
-                <p>Kampala Capital City Authority is committed to transforming Kampala into a vibrant, attractive and sustainable city.</p>
+                <h2>MISSION</h2>
+                <p>Building a Clean, Connected and Empowered Kayunga</p>
                 <a href="#" class="btn btn-secondary">Learn More</a>
             </div>
         </div>
