--- a/index.html
+++ b/index.html
@@ -646,13 +646,7 @@
             <ul>
                 <li><a href="#">Home</a></li>
                 <li class="dropdown">
-                    <a href="#">About KTC <i class="fas fa-chevron-down"></i></a>
-                    <div class="dropdown-menu">
-                        <a href="#">Our Vision & Mission</a>
-                        <a href="#">Leadership</a>
-                        <a href="#">Departments</a>
-                        
-                    </div>
+                    <a href="aboutus.html">About KTC <i class="fas fa-chevron-down"></i></a>
                 </li>
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Projects</a></li>
@@ -678,7 +672,7 @@
         <div class="container">
             <div class="section-title">
                 <h2>Our Services</h2>
-                <p>We offer a wide range of services to residents, businesses and visitors of Kampala</p>
+                <p>We offer a wide range of services to residents, businesses and visitors of Kayunga Town Council</p>
             </div>
             <div class="services-grid">
                 <div class="service-card">
@@ -687,7 +681,7 @@
                     </div>
                     <div class="service-content">
                         <h3>Business Licensing</h3>
-                        <p>Register and obtain licenses for your business operations in Kampala.</p>
+                        <p>Register and obtain licenses for your business operations in Kayunga Town Council.</p>
                     </div>
                 </div>
                 <div class="service-card">
@@ -799,7 +793,7 @@
         <div class="container">
             <div class="section-title">
                 <h2>Ongoing Projects</h2>
-                <p>Explore the major infrastructure and development projects currently underway in Kampala</p>
+                <p>Explore the major infrastructure and development projects currently underway in Kayunga</p>
             </div>
             <div class="projects-grid">
                 <div class="project-card">
@@ -841,7 +835,7 @@
         <div class="container">
             <div class="section-title">
                 <h2 style="color: white;">Our Impact in Numbers</h2>
-                <p style="color: #ccc;">Measuring our progress and impact on the city of Kampala</p>
+                <p style="color: #ccc;">Measuring our progress and impact on the town of Kayunga</p>
             </div>
             <div class="stats-grid">
                 <div class="stat-item">
@@ -869,7 +863,7 @@
         <div class="container">
             <div class="section-title">
                 <h2>Our Partners</h2>
-                <p>We collaborate with various organizations to deliver quality services to Kampala residents</p>
+                <p>We collaborate with various organizations to deliver quality services to Kayunga Town Council residents</p>
             </div>
             <div class="partners-grid">
                 <div class="partner-logo">
@@ -896,7 +890,7 @@
             <div class="footer-grid">
                 <div class="footer-col">
                     <h3>About KCCA</h3>
-                    <p>Kampala Capital City Authority is responsible for the operations of the capital city of Kampala in Uganda.</p>
+                    <p>Kayunga Town Council Auhtority is responsible for the operations of .</p>
                     <div class="social-links" style="margin-top: 20px;">
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
