--- a/index.html
+++ b/index.html
@@ -646,8 +646,7 @@
             <ul>
                 <li><a href="#">Home</a></li>
                 <li class="dropdown">
-                    <a href="aboutus.html">About KTC <i class="fas fa-chevron-down"></i></a>
-                </li>
+                    <a href="ABOUTUS.html">About KTC 
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Projects</a></li>
                 <li><a href="#">Media Center</a></li>
