--- a/index.html
+++ b/index.html
@@ -471,13 +471,13 @@
             align-items: center;
             height: 100px;
             filter: grayscale(100%);
-            opacity: 0.7;
+            opaTown: 0.7;
             transition: all 0.3s;
         }
 
         .partner-logo:hover {
             filter: grayscale(0%);
-            opacity: 1;
+            opaTown: 1;
         }
 
         .partner-logo img {
@@ -689,7 +689,7 @@
                     </div>
                     <div class="service-content">
                         <h3>Building Permits</h3>
-                        <p>Apply for building permits and ensure compliance with city regulations.</p>
+                        <p>Apply for building permits and ensure compliance with Town regulations.</p>
                     </div>
                 </div>
                 <div class="service-card">
@@ -698,7 +698,7 @@
                     </div>
                     <div class="service-content">
                         <h3>Waste Management</h3>
-                        <p>Proper waste collection and disposal services across the city.</p>
+                        <p>Proper waste collection and disposal services across the Town.</p>
                     </div>
                 </div>
                 <div class="service-card">
@@ -747,7 +747,7 @@
         <div class="container">
             <div class="section-title">
                 <h2>Latest News & Updates</h2>
-                <p>Stay informed with the latest developments and announcements from KCCA</p>
+                <p>Stay informed with the latest developments and announcements from KTC</p>
             </div>
             <div class="news-grid">
                 <div class="news-card">
@@ -756,7 +756,7 @@
                     </div>
                     <div class="news-content">
                         <div class="news-date">June 15, 2023</div>
-                        <h3>KCCA Launches New Digital Services Portal</h3>
+                        <h3>KTC Launches New Digital Services Portal</h3>
                         <p>The new portal will enable residents to access services online, reducing time spent at our offices.</p>
                         <a href="#" class="btn">Read More</a>
                     </div>
@@ -768,7 +768,7 @@
                     <div class="news-content">
                         <div class="news-date">June 10, 2023</div>
                         <h3>Major Road Rehabilitation Project Begins</h3>
-                        <p>KCCA has commenced the rehabilitation of major roads in the central business district.</p>
+                        <p>KTC has commenced the rehabilitation of major roads in the central business district.</p>
                         <a href="#" class="btn">Read More</a>
                     </div>
                 </div>
@@ -779,7 +779,7 @@
                     <div class="news-content">
                         <div class="news-date">June 5, 2023</div>
                         <h3>Public Health Awareness Campaign</h3>
-                        <p>KCCA is conducting a city-wide public health awareness campaign on proper waste disposal.</p>
+                        <p>KTC is conducting a Town-wide public health awareness campaign on proper waste disposal.</p>
                         <a href="#" class="btn">Read More</a>
                     </div>
                 </div>
@@ -801,7 +801,7 @@
                     </div>
                     <div class="project-content">
                         <h3>Road Infrastructure Development</h3>
-                        <p>Upgrading and expansion of major roads and drainage systems across the city.</p>
+                        <p>Upgrading and expansion of major roads and drainage systems across the Town.</p>
                         <a href="#" class="btn">View Details</a>
                     </div>
                 </div>
@@ -888,7 +888,7 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
-                    <h3>About KCCA</h3>
+                    <h3>About KTC</h3>
                     <p>Kayunga Town Council Auhtority is responsible for the operations of .</p>
                     <div class="social-links" style="margin-top: 20px;">
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -920,9 +920,9 @@
                 <div class="footer-col">
                     <h3>Contact Us</h3>
                     <ul class="contact-info">
-                        <li><i class="fas fa-map-marker-alt"></i> City Hall, Kampala Road</li>
+                        <li><i class="fas fa-map-marker-alt"></i> Town Hall, Kayunga Town Road</li>
                         <li><i class="fas fa-phone"></i> +256 414 231 200</li>
-                        <li><i class="fas fa-envelope"></i> info@kcca.go.ug</li>
+                        <li><i class="fas fa-envelope"></i> info@KTC.go.ug</li>
                         <li><i class="fas fa-clock"></i> Mon-Fri: 8:00AM - 5:00PM</li>
                     </ul>
                 </div>
@@ -930,7 +930,7 @@
         </div>
         <div class="footer-bottom">
             <div class="container">
-                <p>&copy; 2023 Kampala Capital City Authority. All Rights Reserved.</p>
+                <p>&copy; 2023 Kayunga Town Council. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
