--- a/index.html
+++ b/index.html
@@ -888,8 +888,13 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
-                    <h3>About KTC</h3>
-                    <p>Kayunga Town Council Auhtority is responsible for the operations of .</p>
+                    <h3>Emergency Contacts</h3>
+                     <ul class="contact-info">
+                        <li><i class="fas fa-ambulance"></i> Mumyuka Road, Kayunga, Uganda</li>
+                        <li><i class="fas fa-fire-extinguisher"></i> +256 414 231 200</li>
+                        <li><i class="fas fa-shield"></i>tckayunga@yahoo.com</li>
+                        <li><i class="fas fa-tools"></i> Mon-Fri: 8:00AM - 5:00PM</li>
+                    </ul>
                     <div class="social-links" style="margin-top: 20px;">
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
@@ -920,9 +925,9 @@
                 <div class="footer-col">
                     <h3>Contact Us</h3>
                     <ul class="contact-info">
-                        <li><i class="fas fa-map-marker-alt"></i> Town Hall, Kayunga Town Road</li>
+                        <li><i class="fas fa-map-marker-alt"></i> Mumyuka Road, Kayunga, Uganda</li>
                         <li><i class="fas fa-phone"></i> +256 414 231 200</li>
-                        <li><i class="fas fa-envelope"></i> info@KTC.go.ug</li>
+                        <li><i class="fas fa-envelope"></i>tckayunga@yahoo.com</li>
                         <li><i class="fas fa-clock"></i> Mon-Fri: 8:00AM - 5:00PM</li>
                     </ul>
                 </div>
