--- a/index.html
+++ b/index.html
@@ -892,7 +892,7 @@
                      <ul class="contact-info">
                         <li><i class="fas fa-ambulance"></i> Mumyuka Road, Kayunga, Uganda</li>
                         <li><i class="fas fa-fire-extinguisher"></i> +256 414 231 200</li>
-                        <li><i class="fas fa-shield"></i>tckayunga@yahoo.com</li>
+                        <li><i class="fas fa-shield-alt"></i>tckayunga@yahoo.com</li>
                         <li><i class="fas fa-tools"></i> Mon-Fri: 8:00AM - 5:00PM</li>
                     </ul>
                     <div class="social-links" style="margin-top: 20px;">
