--- a/index.html
+++ b/index.html
@@ -890,9 +890,9 @@
                 <div class="footer-col">
                     <h3>Emergency Contacts</h3>
                      <ul class="contact-info">
-                        <li><i class="fas fa-ambulance"></i> Mumyuka Road, Kayunga, Uganda</li>
-                        <li><i class="fas fa-fire-extinguisher"></i> +256 414 231 200</li>
-                        <li><i class="fas fa-shield-alt"></i>tckayunga@yahoo.com</li>
+                        <li><i class="fas fa-ambulance"></i>Medical Emergency: 112</li>
+                        <li><i class="fas fa-fire-extinguisher"></i>Fire Department: 111</li>
+                        <li><i class="fas fa-shield-alt"></i>Police: 999</li>
                         <li><i class="fas fa-tools"></i> Mon-Fri: 8:00AM - 5:00PM</li>
                     </ul>
                     <div class="social-links" style="margin-top: 20px;">
