--- a/index.html
+++ b/index.html
@@ -893,7 +893,7 @@
                         <li><i class="fas fa-ambulance"></i>Medical Emergency: 112</li>
                         <li><i class="fas fa-fire-extinguisher"></i>Fire Department: 111</li>
                         <li><i class="fas fa-shield-alt"></i>Police: 999</li>
-                        <li><i class="fas fa-tools"></i> Mon-Fri: 8:00AM - 5:00PM</li>
+                        <li><i class="fas fa-tools"></i>Help Desk: 0750858803</li>
                     </ul>
                     <div class="social-links" style="margin-top: 20px;">
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
