--- a/index.html
+++ b/index.html
@@ -885,17 +885,17 @@
     </section>
     
     <footer class="footer">
-        <div class="container">
+               <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
-                    <h3>About KCCA</h3>
-                    <p>Kampala Capital City Authority is responsible for the operations of the capital city of Kampala in Uganda.</p>
-                    <div class="social-links" style="margin-top: 20px;">
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-youtube"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                    </div>
+                    <h3>Emergency Contacts</h3>
+                     <ul class="contact-info">
+                        <li><i class="fas fa-ambulance"></i>Medical Emergency: 112</li>
+                        <li><i class="fas fa-fire-extinguisher"></i>Fire Department: 111</li>
+                        <li><i class="fas fa-shield-alt"></i>Police: 999</li>
+                        <li><i class="fas fa-tools"></i>Help Desk: 0750858803</li>
+                    </ul>
+                   
                 </div>
                 <div class="footer-col">
                     <h3>Quick Links</h3>
