--- a/ABOUTUS.html
+++ b/ABOUTUS.html
@@ -13,6 +13,7 @@
       <div class="brand">
         <div class="logo">KTC</div>
         <div>
+          <img src="national-coat-of-arms-of-the-republic-of-uganda-DTK91D.jpg"></img>
           <h1 class="brand-title">Kayunga Town Council</h1>
           <p class="tagline">Advancing Together for a Greater Kayunga</p>
         </div>
