--- a/ABOUTUS.html
+++ b/ABOUTUS.html
@@ -11,9 +11,8 @@
   <header class="site-header">
     <div class="container header-inner">
       <div class="brand">
-        <div ><img src="national-coat-of-arms-of-the-republic-of-uganda-DTK91D.jpg"></img></div>
+        <div class="logo">KTC</div>
         <div>
-          
           <h1 class="brand-title">Kayunga Town Council</h1>
           <p class="tagline">Advancing Together for a Greater Kayunga</p>
         </div>
