--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@
                 <li><a href="#">Home</a></li>
                 <li class="dropdown">
                     <a href="ABOUTUS.html">About KTC 
-                <li><a href="#">Services</a></li>
+                <li><a href="services.html">Services</a></li>
                 <li><a href="#">Projects</a></li>
                 <li><a href="#">Media Center</a></li>
                 <li><a href="#">Tenders</a></li>
