--- a/index.html
+++ b/index.html
@@ -920,9 +920,9 @@
                 <div class="footer-col">
                     <h3>Contact Us</h3>
                     <ul class="contact-info">
-                        <li><i class="fas fa-map-marker-alt"></i> City Hall, Kampala Road</li>
+                        <li><i class="fas fa-map-marker-alt"></i> Mumyuka Road Opp Kayunga Regional Referral Hospital, Kayunga</li>
                         <li><i class="fas fa-phone"></i> +256 414 231 200</li>
-                        <li><i class="fas fa-envelope"></i> info@kcca.go.ug</li>
+                        <li><i class="fas fa-envelope"></i>tckayunga@yahoo.com</li>
                         <li><i class="fas fa-clock"></i> Mon-Fri: 8:00AM - 5:00PM</li>
                     </ul>
                 </div>
@@ -930,7 +930,7 @@
         </div>
         <div class="footer-bottom">
             <div class="container">
-                <p>&copy; 2023 Kampala Capital City Authority. All Rights Reserved.</p>
+                <p>&copy; 2025 Kayunga Town Council. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
