--- a/services.html
+++ b/services.html
@@ -678,7 +678,7 @@
         <div class="container">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
+                <li><a href="ABOUTUS.html">About Us</a></li>
                 <li class="dropdown">
                     <a href="#">Services <i class="fas fa-chevron-down"></i></a>
                     <div class="dropdown-menu">
