--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@
             <ul>
                 <li><a href="#">Home</a></li>
                 <li class="dropdown">
-                    <a href="ABOUTUS.html">About KTC 
+                    <a href="ALTERNATIVE.html">About KTC 
                 <li><a href="services.html">Services</a></li>
                 <li><a href="#">Projects</a></li>
                 <li><a href="#">Media Center</a></li>
