Update about us final.html

--- a/about us final.html
+++ b/about us final.html
@@ -14,12 +14,12 @@
         }
         
         :root {
-            --primary: #1a3a5f;
-            --secondary: #d4af37;
-            --accent: #2c5282;
+            --primary: #0056a6;
+            --secondary: #ffcc00;
+            --accent: #e63946;
             --light: #f8f9fa;
             --dark: #333;
-            --text: #444;
+            --text: #6c757d;
         }
         
         body {
