Update about us final.html

--- a/about us final.html
+++ b/about us final.html
@@ -145,7 +145,7 @@
         
         /* Navigation styles */
         .main-nav {
-            background-color: #f8f9fa;
+            background-color: #0056a6;
             border-top: 1px solid #e9ecef;
             border-bottom: 1px solid #e9ecef;
         }
