--- a/about us final.html
+++ b/about us final.html
@@ -128,7 +128,7 @@
 
         /* Navigation */
         .main-nav {
-            background-color: #6d1ca3; /* Fixed */
+            background-color: #0056a6; /* Fixed */
             border-top: 1px solid #e9ecef;
             border-bottom: 1px solid #e9ecef;
         }
