Update about us final.html

--- a/about us final.html
+++ b/about us final.html
@@ -165,10 +165,10 @@
             width: 100%;
         }
         .nav a:hover {
-            color: var(--primary);
+            color: var(--secondary);
         }
         .nav a.active {
-            color: var(--primary);
+            color: var(--secondary);
             font-weight: 600;
         }
         .nav a.active:after {
