--- a/about us final.html
+++ b/about us final.html
@@ -144,7 +144,7 @@
         }
         .nav a {
             text-decoration: none;
-            color: var(--dark);
+            color: var(--white);
             font-weight: 500;
             transition: color 0.3s;
             font-size: 16px;
