Update about us final.html

--- a/about us final.html
+++ b/about us final.html
@@ -26,9 +26,10 @@
             background-color: var(--light);
         }
         .container {
+            width: 100%;
             max-width: 1200px;
             margin: 0 auto;
-            padding: 0 20px;
+            padding: 0 15px;
         }
 
         /* Contact Bar */
