Update about us final.html

--- a/about us final.html
+++ b/about us final.html
@@ -34,11 +34,10 @@
 
         /* Contact Bar */
         .contact-bar {
-            background-color: var(--primary);
+            background: var(--primary);
             color: white;
             padding: 8px 0;
             font-size: 14px;
-            border-bottom: 2px solid var(--secondary);
         }
         .contact-bar .container {
             display: flex;
