--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@
                 <li class="dropdown">
                     <a href="#">About KTC</a>
                     <div class="dropdown-menu">
-                        <a href="about-us-final.html"><i class="fas fa-info-circle"></i>About Us</a>
+                        <a href="about us final.html"><i class="fas fa-info-circle"></i>About Kayunga Town Council</a>
                         <a href="leadership.html"><i class="fas fa-users"></i>Leadership</a>
                         <a href="departments.html"><i class="fas fa-building"></i>Departments</a>
                         <a href="vision-mission.html"><i class="fas fa-bullseye"></i>Vision & Mission</a>
