--- a/index.html
+++ b/index.html
@@ -111,17 +111,33 @@
         .logo {
             display: flex;
             align-items: center;
+            cursor: pointer;
+            transition: all 0.3s ease;
+        }
+
+        .logo:hover {
+            transform: scale(1.02);
+        }
+
+        .logo:hover .logo-text h1 {
+            color: var(--primary);
         }
 
         .logo img {
             height: 60px;
             margin-right: 10px;
+            transition: transform 0.3s ease;
+        }
+
+        .logo:hover img {
+            transform: scale(1.05);
         }
 
         .logo-text h1 {
             font-size: 24px;
             color: var(--primary);
             line-height: 1.2;
+            transition: color 0.3s ease;
         }
 
         .logo-text span {
@@ -666,13 +682,13 @@
 
     <header class="header-main">
         <div class="container">
-            <div class="logo">
+            <a href="#" class="logo" title="Return to Home">
                 <img src="national-coat-of-arms-of-the-republic-of-uganda-DTK91D.jpg" alt="Uganda Coat of Arms">
                 <div class="logo-text">
                     <h1>KAYUNGA TOWN COUNCIL</h1>
                     <span>Advancing Together for a Greater Kayunga</span>
                 </div>
-            </div>
+            </a>
             <div class="search-box">
                 <input type="text" placeholder="Search...">
                 <button><i class="fas fa-search"></i></button>
@@ -686,16 +702,13 @@
     <nav class="main-nav">
         <div class="container">
             <ul>
-                <li><a href="#">Home</a></li>
                 <li class="dropdown">
-                    <a href="#">About KTC</a>
+                    <a href="#">About US</a>
                     <div class="dropdown-menu">
-                        <a href="about us final.html"><i class="fas fa-info-circle"></i>About Kayunga Town Council</a>
+                        <a href="about us final.html"><i class="fas fa-info-circle" ></i>About Us</a>
                         <a href="leadership.html"><i class="fas fa-users"></i>Leadership</a>
                         <a href="departments.html"><i class="fas fa-building"></i>Departments</a>
                         <a href="vision-mission.html"><i class="fas fa-bullseye"></i>Vision & Mission</a>
-                        <a href="history.html"><i class="fas fa-history"></i>Our History</a>
-                        <a href="achievements.html"><i class="fas fa-trophy"></i>Achievements</a>
                     </div>
                 </li>
                 <li class="dropdown">
@@ -710,10 +723,10 @@
                     </div>
                 </li>
                 <li><a href="#">Projects</a></li>
-                <li><a href="#">Witzenhausen</a></li>
                 <li><a href="#">Tenders</a></li>
                 <li><a href="#">Careers</a></li>
                 <li><a href="#">Contact Us</a></li>
+                <li><a href="#">Witzenhausen</a></li>
             </ul>
         </div>
     </nav>
@@ -1009,6 +1022,20 @@
                 if (window.innerWidth <= 768) {
                     e.preventDefault();
                     this.classList.toggle('active');
+                }
+            });
+        });
+
+        // Smooth scrolling for navigation links
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener('click', function (e) {
+                e.preventDefault();
+                const target = document.querySelector(this.getAttribute('href'));
+                if (target) {
+                    target.scrollIntoView({
+                        behavior: 'smooth',
+                        block: 'start'
+                    });
                 }
             });
         });
