--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@
 
     <header class="header-main">
         <div class="container">
-            <a href="#" class="logo" title="Return to Home">
+            <a href="history and background.html" class="logo" title="Return to Home">
                 <img src="national-coat-of-arms-of-the-republic-of-uganda-DTK91D.jpg" alt="Uganda Coat of Arms">
                 <div class="logo-text">
                     <h1>KAYUNGA TOWN COUNCIL</h1>
