Update history and background.html

--- a/history and background.html
+++ b/history and background.html
@@ -727,7 +727,7 @@
                 <li class="dropdown active">
                     <a href="#">About US</a>
                     <div class="dropdown-menu">
-                        <a href="about-us.html" class="active"><i class="fas fa-info-circle"></i>About Us</a>
+                        <a href="history and background.html" class="active"><i class="fas fa-info-circle"></i>About Us</a>
                         <a href="leadership.html"><i class="fas fa-users"></i>Leadership</a>
                         <a href="departments.html"><i class="fas fa-building"></i>Departments</a>
                         <a href="vision-mission.html"><i class="fas fa-bullseye"></i>Vision & Mission</a>
