--- a/leadership.html
+++ b/leadership.html
@@ -674,7 +674,7 @@
                 <li class="dropdown active">
                     <a href="#">About US</a>
                     <div class="dropdown-menu">
-                        <a href="about-us.html"><i class="fas fa-info-circle"></i>About Us</a>
+                        <a href="history and development.html"><i class="fas fa-info-circle"></i>About Us</a>
                         <a href="leadership.html" class="active"><i class="fas fa-users"></i>Leadership</a>
                         <a href="departments.html"><i class="fas fa-building"></i>Departments</a>
                         <a href="vision-mission.html"><i class="fas fa-bullseye"></i>Vision & Mission</a>
